--- a/reactReduxBoiler-master/client/index.html
+++ b/reactReduxBoiler-master/client/index.html
@@ -1,10 +1,13 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="styles/styles.css">
     <title>Reverser</title>
   </head>
   <body>
-    <div class="container" />
+    <div class="container" style="font-family: 'Roboto'"/>
     <script src="public/bundle.js" type="text/javascript"></script>
   </body>
 </html>
