--- a/reactReduxBoiler-master/client/index.html
+++ b/reactReduxBoiler-master/client/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Reverser</title>
+    <title>Sound Journal</title>
   </head>
   <body>
     <div class="container" />
